# wallet-server

./: .env  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
app/: config.py  main.py
app/auth/: auth.py  base_config.py  manager.py  middelware_auth.py  models.py  schemas.py  utilts.py
app/currency/: routers.py  services.py
app/wallet/: models.py  routers.py  schemas.py  services.py
migration/: env.py
migration/versions/: 4b52d40fd3d9_initial_bd.py  797a9db42b44_initial_bd.py  90cf1c802778_initial.py  9e71bb34c792_added_initial_table.py  a578a358a220_added_fk_user_and_0authaccount.py  db8179c069d6_.py  fe00b1a21774_.py
src/: config.py  database.py  main.py
src/auth/: api.py  base_config.py  mail_sender.py  middelware_auth.py  models.py  routers.py  schemas.py  services.py  utilts.py
src/currency/: services.py
src/wallet/: models.py  routers.py  schemas.py  services.py
