[tool.poetry]
name = "wallet-backend"
version = "0.1.0"
description = ""
authors = ["Narashi Kuga <orenvady@gmail.com>"]
readme = "README.md"
packages = [{include = "wallet_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.12.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
authlib = "1.2.1"
bcrypt = "4.0.1"
certifi = "2023.7.22"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "41.0.5"
dnspython = "2.4.2"
email-validator = "2.0.0.post2"
fastapi = "0.104.1"
fastapi-users = "12.1.2"
fastapi-users-db-sqlalchemy = "6.0.1"
greenlet = "3.0.1"
h11 = "0.14.0"
httpcore = "0.17.3"
httptools = "0.6.1"
httpx = "0.24.1"
httpx-oauth = "0.13.0"
idna = "3.4"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
makefun = "1.15.2"
mako = "1.3.0"
markupsafe = "2.1.3"
orjson = "3.9.10"
passlib = "1.7.4"
pycparser = "2.21"
pydantic = "2.5.0"
pydantic-extra-types = "2.1.0"
pydantic-settings = "2.1.0"
pydantic-core = "2.14.1"
pyjwt = "2.8.0"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
sniffio = "1.3.0"
sqlalchemy = "2.0.23"
starlette = "0.27.0"
typing-extensions = "4.8.0"
ujson = "5.8.0"
uvicorn = "0.24.0.post1"
watchfiles = "0.21.0"
websockets = "12.0"
aiohttp = "3.8.6"
aiosignal = "1.3.1"
attrs = "23.1.0"
charset-normalizer = "3.3.2"
dateparser = "1.1.8"
frozenlist = "1.4.0"
multidict = "6.0.4"
pycryptodome = "3.19.0"
python-binance = "1.0.19"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
regex = "2023.10.3"
requests = "2.31.0"
six = "1.16.0"
tzdata = "2023.3"
tzlocal = "5.2"
urllib3 = "2.1.0"
yarl = "1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
